De eindopdracht is klaar! - Model is opgeslagen en ingeladen op de prediction pagina - "Professionele uitstsaling" - De predictionpagina en bijbehorende JS uitgewerkt - Code Cleanup in train.js

--- a/predict.html
+++ b/predict.html
@@ -1,31 +1,63 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/chart.min.js"></script>
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    
+    <link rel="stylesheet" href="./style.css">
     <script defer src="./predict.js" type="module"></script>
-    <title>ML5 Neural Network Regression</title>
+    <title>Prg08 Eindproject Mees Muller</title>
 </head>
 
 <body>
-    <div><h2>ML5 Neural Network Regression Predict</h2></div>
-    <label>Werkgeheugen</label>
-    <input type="number" id="fieldMemory"/>
-    <label>Prijs</label>
-    <input type="number" id="fieldPrice"/>
-    <label>Batterijcapaciteit</label>
-    <input type="number" id="fieldBattery"/>
-    <button id="predictionButton">Voorspel!</button>
-    <div id="result">Ik voorspel...</div>
-
-</body>
-
+    <div id="pageTitle">Mees Muller's Prg08 Eindproject</div>
+    <nav><a href="./index.html">Home</a><a href="./train.html">Training</a></nav>
+    <main>
+        <div><h3>Voorspellen</h3></div>
+        <div>
+            <form id="form">
+                <label>Tijd</label>
+                <br>
+                <input id="time" type="range" min="0">
+                <label id="timeLabel">(7245)</label>
+                <br>
+                <label>Lengte</label>
+                <br>
+                <input id="length" type="range" min="0">
+                <label id="lengthLabel">(3275)</label>
+                <br>
+                <label>Airline</label>
+                <br>
+                <select id="airline">
+                </select>
+                <br>
+                <label>Departure Airport</label>
+                <br>
+                <select id="airportFrom">
+                </select>
+                <br>
+                <label>Arrival Airport</label>
+                <br>
+                <select id="airportTo">
+                </select>
+                <br>
+                <label>Day of the week</label>
+                <br>
+                <input id="day" type="range" min="1" max="7" value="4">
+                <label id="dayLabel">(4)</label>
+                <br>
+                <input id="submit" type="submit" value="Sent!">
+            </form>
+        </div>
+        <div id="prediction">Please submit the form for a prediction!</div>
+    </main>
+ 
+    <footer>Data Source: <a href="https://www.kaggle.com/datasets/ulrikthygepedersen/airlines-delay">Airlines Delay @ Kaggle</a></footer>
+  </body>
 </html>
-
- -->
