--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <script defer src="./app.js" type="module"></script>
-
-    <title>ML5 Neural Network Regression</title>
+    
+    <link rel="stylesheet" href="./style.css">
+    <title>Prg08 Eindproject Mees Muller</title>
 </head>
 
 <body>
-    <div><h2>ML5 Neural Network Regression</h2></div>
-    <div><a href="./train.html">Training</a> - <a href="./predict.html">Voorspelling</a></div>
-</body>
-
+    <div id="pageTitle">Mees Muller's Prg08 Eindproject</div>
+    <nav><a href="./train.html">Training</a><a href="./predict.html">Voorspellen</a></nav>
+ 
+    <footer>Data Source: <a href="https://www.kaggle.com/datasets/ulrikthygepedersen/airlines-delay">Airlines Delay @ Kaggle</a></footer>
+  </body>
 </html>
