--- a/train.html
+++ b/train.html
@@ -10,36 +10,41 @@
     <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
 
-
+    <link rel="stylesheet" href="./style.css">
     <script defer src="./train.js" type="module"></script>
-    <title>ML5 Neural Classification Regression</title>
+    <title>Prg08 Eindproject Mees Muller</title>
 </head>
 
 <body>
-    <div><h2>ML5 Neural Network Classification Training</h2></div>
-    <button id="downloadButton">Download model</button>
-    <div><h2>Grafiek</h2></div>
-    <canvas id="myChart" width="300" height="200"></canvas>
-    <div id="accuracy">Accuracy: - </div>
-    <div>
-        <table>
-            <tr>
-                <td></td>
-                <td>Predicted delayed</td>
-                <td>Predicted on time</td>
-            </tr>
-            <tr>
-                <td>Actual delayed</td>
-                <td id="top-predictdelay_left-actualdelay"></td>
-                <td id="top-predictontime_left-actualdelay"></td>
-            </tr>
-            <tr>
-                <td>Actual on time</td>
-                <td id="top-predictdelay_left-actualontime"></td>
-                <td id="top-predictontime_left-actualontime"></td>
-            </tr>
-        </table>
-    </div>
+    <div id="pageTitle">Mees Muller's Prg08 Eindproject</div>
+    <nav><a href="./index.html">Home</a><a href="./predict.html">Voorspellen</a></nav>
+    <main>
+        <div><h3>Trainen</h3></div>
+        <!-- <div><h2>Grafiek</h2></div>
+    <canvas id="myChart" width="300" height="200"></canvas> -->
+        <div id="accuracy">Accuracy: - </div>
+        <div>
+            <table>
+                <tr>
+                    <td></td>
+                    <td>Predicted delayed</td>
+                    <td>Predicted on time</td>
+                </tr>
+                <tr>
+                    <td>Actual delayed</td>
+                    <td id="top-predictdelay_left-actualdelay"></td>
+                    <td id="top-predictontime_left-actualdelay"></td>
+                </tr>
+                <tr>
+                    <td>Actual on time</td>
+                    <td id="top-predictdelay_left-actualontime"></td>
+                    <td id="top-predictontime_left-actualontime"></td>
+                </tr>
+            </table>
+        </div>
+        <button id="downloadButton">Download model</button>
+    </main>
+    <footer>Data Source: <a href="https://www.kaggle.com/datasets/ulrikthygepedersen/airlines-delay">Airlines Delay @ Kaggle</a></footer>
 </body>
 
 </html>
