--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div id="pageTitle">Mees Muller's Prg08 Eindproject</div>
+    <div id="pageTitle">Mees Muller's Prg08 Eindproject ✈</div>
     <nav><a href="./train.html">Training</a><a href="./predict.html">Voorspellen</a></nav>
  
     <footer>Data Source: <a href="https://www.kaggle.com/datasets/ulrikthygepedersen/airlines-delay">Airlines Delay @ Kaggle</a></footer>
