--- a/predict.html
+++ b/predict.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="pageTitle">Mees Muller's Prg08 Eindproject</div>
+    <div id="pageTitle">Mees Muller's Prg08 Eindproject ✈</div>
     <nav><a href="./index.html">Home</a><a href="./train.html">Training</a></nav>
     <main>
         <div><h3>Voorspellen</h3></div>
