--- a/train.html
+++ b/train.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div id="pageTitle">Mees Muller's Prg08 Eindproject</div>
+    <div id="pageTitle">Mees Muller's Prg08 Eindproject ✈</div>
     <nav><a href="./index.html">Home</a><a href="./predict.html">Voorspellen</a></nav>
     <main>
         <div><h3>Trainen</h3></div>
